--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "Error-handling Express middleware that displays syntax highlighted source code.",
   "main": "server.js",
   "dependencies": {
-    "stack-trace": "0.0.9",
-    "async-each": "~0.1.4",
-    "errto": "~0.2.1",
-    "prettify-error": "~0.1.1",
-    "ejs": "~1.0.0",
-    "highlight.js": "https://github.com/alessioalex/highlight.js/releases/download/npm-v0.1.1/highlight.js.tar.gz.tgz"
+    "ejs": "^2.3.4",
+    "errto": "^0.2.1",
+    "highlight.js": "https://github.com/alessioalex/highlight.js/releases/download/npm-v0.1.1/highlight.js.tar.gz.tgz",
+    "pretty-error": "^1.2.0",
+    "stack-trace": "^0.0.9",
+    "tiny-map-async": "^1.0.0"
   },
   "devDependencies": {
     "express": "^4.13.3"
   },
-  "keywords": ["express", "error", "error-handler", "errorhandler"],
+  "keywords": [
+    "express",
+    "error",
+    "error-handler",
+    "errorhandler"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
